--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </main>
     <main class="body1 hidden">
         <div class="header">
-            <p style="font-size: 3rem; color: #070707;"><b>Tic Tac Toe</b></p>
+            <p style="font-size: 2.3rem; color: #070707; font-family: Verdana, Geneva, Tahoma, sans-serif;"><b>Tic Tac Toe</b></p>
         </div>
         <div class="container">
             <div class="game">
